# fota_task

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  copy_image.py  custom_partition.csv  deploy.ps1  deploy.sh  ota_test.py
components/boardled/: CMakeLists.txt  boardled.c
components/boardled/include/: boardled.h
components/config_portal_ap/: CMakeLists.txt  config_portal_ap.c
components/config_portal_ap/include/: config_portal_ap.h
components/ota_app/: CMakeLists.txt  ota_app.c
components/ota_app/certs/: ota_chaos_cert.pem
components/ota_app/include/: ota_app.h
components/task_simulation/: CMakeLists.txt  task_simulation.c
components/task_simulation/include/: task_simulation.h
components/wifi_ble_provisioning/: CMakeLists.txt  wifi_ble_provisioning.c
components/wifi_ble_provisioning/include/: wifi_ble_provisioning.h
components/wifi_stack/: CMakeLists.txt  wifi_stack.c
components/wifi_stack/include/: wifi_stack.h
docs/: prompt.md
main/: CMakeLists.txt  hello_world_main.c
web/: index.html
